[package]
name = "rserv"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
env_logger = "0.11.9"
log = "0.4.29"
rand = "0.10.0"
redis = { version = "1.0.4", features = ["tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.49.0", features = ["macros", "rt", "rt-multi-thread"] }
